@@ -38,6 +38,7 @@ Version 1.6.2:
   * User interface
     * Improved the sorting of the XP and traits columns in the unit list dialog
       (part of bug #13360).
+    * A click on a slider now properly sets the position.
 
   * Miscellaneous and bugfixes
     * Fixed missing unit graphics when loading a start-of-scenario savegame.
