@@ -8,6 +8,7 @@ Version 1.6.2+svn:
  * User interface:
    * Fixed an multi-character UTF-8 handling bug in the password textbox
    * Increase the lineheight in the new dialogs
+   * A click on a slider now properly sets the position
 
 Version 1.6.2:
  * Campaigns:
